@@ -1,3 +1,7 @@
+Fri Mar 31 12:37:16 2006  Søren Sandmann  <sandmann@redhat.com>
+
+	* dix/window.c: Fix copyright statement
+
 2006-03-31  Egbert Eich  <eich_at_freedesktop_dot_org>
 
 	* mi/miwideline.c: (miFillRectPolyHelper), (miLineArc):
